fix: fix some visibility issue

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -20,3 +20,14 @@
 .info-item {
 	padding: 0 5px;
 }
+
+@media (max-width: 500px) {
+	.header-title {
+		padding-right: 50px;
+		font-weight: 700;
+	}
+	.header-container {
+		flex-wrap: wrap;
+		margin-bottom: 30px;
+	}
+}
